--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,14 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "jest": true
-    },
-    "extends": "airbnb-base",
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "rules": {
-        "no-restricted-syntax": [
-            "error",
-            "LabeledStatement",
-            "WithStatement"
-        ],
-        "no-console": 0,
-        "max-len": [
-            "error",
-            { "code": 150 }
-        ],
-        "class-methods-use-this": 0,
-        "no-alert": 0,
-        "no-param-reassign": 0
-    }
+	"env": {
+		"jest": true,
+		"browser": true,
+		"es2021": true
+	},
+	"extends": "airbnb-base",
+	"overrides": [],
+	"parserOptions": {
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
+	"rules": {}
 }
